# docmind

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py
app/api/: dependencies.py  middleware.py
app/api/routes/: documents.py  health.py  query.py
app/models/: __init__.py  document.py  schemas.py
app/services/: embeddings.py  generation.py  ingestion.py  parser.py  retrieval.py
app/utils/: chunking.py  text.py
scripts/: seed_data.py
tests/: conftest.py  test_api.py  test_chunking.py  test_ingestion.py  test_retrieval.py
